--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "wsgi.py",
+            "src": "app.py",
             "use": "@vercel/python"
-        },
-        {
-            "src": "static/**",
-            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
             "src": "/(.*)",
-            "dest": "wsgi.py"
+            "dest": "app.py"
         }
     ]
 }
