--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,12 @@ jobs:
         python-version: '3.9'
         cache: 'pip'
 
+    - name: Set up Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '11'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -45,7 +51,19 @@ jobs:
           zlib1g-dev \
           libgstreamer1.0 \
           gstreamer1.0-plugins-base \
-          gstreamer1.0-plugins-good
+          gstreamer1.0-plugins-good \
+          autoconf \
+          automake \
+          libtool \
+          unzip \
+          pkg-config \
+          zip
+
+    - name: Cache Buildozer global directory
+      uses: actions/cache@v4
+      with:
+        path: .buildozer
+        key: buildozer-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
 
     - name: Build APK
       run: |
