--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install buildozer
         pip install cython==0.29.33
+        pip install urllib3
 
     - name: Install system dependencies
       run: |
@@ -58,6 +59,11 @@ jobs:
           unzip \
           pkg-config \
           zip
+
+    - name: Prepare fonts
+      run: |
+        python prepare_fonts.py
+        ls -la fonts/
 
     - name: Cache Buildozer global directory
       uses: actions/cache@v4
