--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install buildozer
         pip install cython==0.29.33
-        pip install urllib3
 
     - name: Install system dependencies
       run: |
@@ -50,15 +49,36 @@ jobs:
           libavformat-dev \
           libavcodec-dev \
           zlib1g-dev \
-          libgstreamer1.0 \
-          gstreamer1.0-plugins-base \
-          gstreamer1.0-plugins-good \
+          pkg-config \
+          libunwind-dev
+
+    - name: Install additional dependencies
+      run: |
+        sudo apt-get install -y \
           autoconf \
           automake \
           libtool \
+          libpython3-dev \
+          ccache \
           unzip \
-          pkg-config \
           zip
+
+    - name: Install GStreamer dependencies
+      run: |
+        sudo apt-get install -y \
+          libgstreamer1.0-dev \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
+          gstreamer1.0-plugins-bad \
+          gstreamer1.0-plugins-ugly \
+          gstreamer1.0-libav \
+          gstreamer1.0-tools \
+          gstreamer1.0-x \
+          gstreamer1.0-alsa \
+          gstreamer1.0-gl \
+          gstreamer1.0-gtk3 \
+          gstreamer1.0-qt5 \
+          gstreamer1.0-pulseaudio
 
     - name: Prepare fonts
       run: |
