--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,26 +9,37 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
         cache: 'pip'
 
-    - name: Set up Java
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip wheel setuptools
+        pip install buildozer==1.5.0
+        pip install cython==0.29.33
+
+    - name: Set up JDK
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install buildozer
-        pip install cython==0.29.33
+    - name: Cache Buildozer dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          .buildozer
+          /home/runner/.buildozer
+        key: buildozer-${{ hashFiles('buildozer.spec') }}
+        restore-keys: |
+          buildozer-
 
     - name: Install system dependencies
       run: |
@@ -49,51 +60,30 @@ jobs:
           libavformat-dev \
           libavcodec-dev \
           zlib1g-dev \
-          pkg-config \
-          libunwind-dev
-
-    - name: Install additional dependencies
-      run: |
-        sudo apt-get install -y \
+          libgstreamer1.0-dev \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
           autoconf \
           automake \
           libtool \
           libpython3-dev \
           ccache \
           unzip \
-          zip
-
-    - name: Install GStreamer dependencies
-      run: |
-        sudo apt-get install -y \
-          libgstreamer1.0-dev \
-          gstreamer1.0-plugins-base \
-          gstreamer1.0-plugins-good \
-          gstreamer1.0-plugins-bad \
-          gstreamer1.0-plugins-ugly \
-          gstreamer1.0-libav \
-          gstreamer1.0-tools \
-          gstreamer1.0-x \
-          gstreamer1.0-alsa \
-          gstreamer1.0-gl \
-          gstreamer1.0-gtk3 \
-          gstreamer1.0-qt5 \
-          gstreamer1.0-pulseaudio
+          pkg-config \
+          zip \
+          openjdk-11-jdk \
+          lld
 
     - name: Prepare fonts
       run: |
         python prepare_fonts.py
         ls -la fonts/
 
-    - name: Cache Buildozer global directory
-      uses: actions/cache@v4
-      with:
-        path: .buildozer
-        key: buildozer-${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
-
     - name: Build APK
       run: |
         buildozer android debug
+      env:
+        BUILDOZER_WARN_ON_ROOT: 0
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
