--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,12 +49,23 @@ jobs:
         sudo apt-get clean
         sudo apt-get update
 
+    - name: Install Android SDK Command-line Tools
+      run: |
+        mkdir -p ${ANDROID_HOME}/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip commandlinetools-linux-9477386_latest.zip
+        mv cmdline-tools ${ANDROID_HOME}/cmdline-tools/latest
+        rm commandlinetools-linux-9477386_latest.zip
+      env:
+        ANDROID_HOME: /usr/local/lib/android-sdk
+
     - name: Install Android SDK and tools
       run: |
-        sudo apt-get install -y \
-          android-sdk \
-          android-sdk-platform-tools \
-          aidl
+        export PATH=${ANDROID_HOME}/cmdline-tools/latest/bin:${PATH}
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.3" "ndk;23.1.7779620"
+      env:
+        ANDROID_HOME: /usr/local/lib/android-sdk
 
     - name: Install libunwind
       run: |
@@ -96,22 +107,17 @@ jobs:
           gstreamer1.0-plugins-base \
           gstreamer1.0-plugins-good
 
-    - name: Accept Android licenses
-      run: |
-        yes | sdkmanager --licenses || true
-
     - name: Prepare fonts
       run: |
         python prepare_fonts.py
-        ls -la fonts/
 
     - name: Build APK
       run: |
         buildozer android debug
       env:
         BUILDOZER_WARN_ON_ROOT: 0
-        ANDROID_HOME: /usr/lib/android-sdk
-        ANDROID_NDK_HOME: /usr/lib/android-ndk
+        ANDROID_HOME: /usr/local/lib/android-sdk
+        ANDROID_NDK_HOME: /usr/local/lib/android-sdk/ndk/23.1.7779620
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
