--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,73 +6,36 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
-        cache: 'pip'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip wheel setuptools
-        pip install buildozer==1.5.0
-        pip install cython==0.29.33
-
-    - name: Set up JDK
+    - name: Set up Java
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '11'
 
-    - name: Cache Buildozer dependencies
-      uses: actions/cache@v4
-      with:
-        path: |
-          .buildozer
-          /home/runner/.buildozer
-        key: buildozer-${{ hashFiles('buildozer.spec') }}
-        restore-keys: |
-          buildozer-
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
 
-    - name: Fix broken packages
+    - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -f
-        sudo dpkg --configure -a
-        sudo apt-get clean
-        sudo apt-get update
-
-    - name: Install Android SDK Command-line Tools
-      run: |
-        mkdir -p ${ANDROID_HOME}/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip commandlinetools-linux-9477386_latest.zip
-        mv cmdline-tools ${ANDROID_HOME}/cmdline-tools/latest
-        rm commandlinetools-linux-9477386_latest.zip
-      env:
-        ANDROID_HOME: /usr/local/lib/android-sdk
-
-    - name: Install Android SDK and tools
-      run: |
-        export PATH=${ANDROID_HOME}/cmdline-tools/latest/bin:${PATH}
-        yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.3" "ndk;23.1.7779620"
-      env:
-        ANDROID_HOME: /usr/local/lib/android-sdk
-
-    - name: Install libunwind
-      run: |
-        sudo apt-get install -y libunwind8-dev
+        python -m pip install --upgrade pip
+        pip install buildozer==1.5.0
+        pip install cython==0.29.33
 
     - name: Install system dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install -y \
           python3-pip \
           build-essential \
@@ -89,6 +52,9 @@ jobs:
           libavformat-dev \
           libavcodec-dev \
           zlib1g-dev \
+          libgstreamer1.0-dev \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
           autoconf \
           automake \
           libtool \
@@ -97,27 +63,13 @@ jobs:
           unzip \
           pkg-config \
           zip \
-          openjdk-11-jdk \
-          lld
-
-    - name: Install GStreamer
-      run: |
-        sudo apt-get install -y \
-          libgstreamer1.0-dev \
-          gstreamer1.0-plugins-base \
-          gstreamer1.0-plugins-good
-
-    - name: Prepare fonts
-      run: |
-        python prepare_fonts.py
+          openjdk-11-jdk
 
     - name: Build APK
       run: |
         buildozer android debug
       env:
         BUILDOZER_WARN_ON_ROOT: 0
-        ANDROID_HOME: /usr/local/lib/android-sdk
-        ANDROID_NDK_HOME: /usr/local/lib/android-sdk/ndk/23.1.7779620
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
