--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -26,6 +24,12 @@ jobs:
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
+
+    - name: Cache Buildozer global directory
+      uses: actions/cache@v4
+      with:
+        path: .buildozer
+        key: ${{ runner.os }}-${{ hashFiles('buildozer.spec') }}
 
     - name: Install dependencies
       run: |
@@ -61,9 +65,15 @@ jobs:
           libpython3-dev \
           ccache \
           unzip \
+          ant \
           pkg-config \
           zip \
           openjdk-11-jdk
+
+    - name: Download Android SDK
+      run: |
+        sdkmanager "platforms;android-28" "build-tools;28.0.3" "ndk;23.1.7779620"
+        yes | sdkmanager --licenses
 
     - name: Build APK
       run: |
