--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v4
@@ -14,17 +14,56 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.7'
 
-    - name: Build with Buildozer
-      uses: ArtemSBulgakov/buildozer-action@v1
-      id: buildozer
-      with:
-        workdir: .
-        buildozer_version: stable
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install buildozer==1.2.0
+        pip install cython==0.29.33
 
-    - name: Upload artifacts
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          python3-pip \
+          build-essential \
+          git \
+          python3 \
+          python3-dev \
+          ffmpeg \
+          libsdl2-dev \
+          libsdl2-image-dev \
+          libsdl2-mixer-dev \
+          libsdl2-ttf-dev \
+          libportmidi-dev \
+          libswscale-dev \
+          libavformat-dev \
+          libavcodec-dev \
+          zlib1g-dev \
+          libgstreamer1.0-dev \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
+          autoconf \
+          automake \
+          libtool \
+          libpython3-dev \
+          ccache \
+          unzip \
+          ant \
+          pkg-config \
+          zip \
+          default-jdk
+
+    - name: Build APK
+      run: |
+        buildozer android debug
+      env:
+        BUILDOZER_WARN_ON_ROOT: 0
+
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: package
-        path: ${{ steps.buildozer.outputs.filename }}
+        name: habit-tracker-debug
+        path: bin/*.apk
+        retention-days: 5
