--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,19 +8,22 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     container:
-      image: kivy/buildozer:latest
+      image: kivy/buildozer:2022.05.20
 
     steps:
     - uses: actions/checkout@v4
 
     - name: Build APK
       run: |
-        apt-get update && apt-get install -y git
+        apt-get update && apt-get install -y git wget unzip
+        wget https://dl.google.com/android/repository/android-ndk-r13b-linux-x86_64.zip
+        unzip android-ndk-r13b-linux-x86_64.zip
+        export ANDROID_NDK_HOME=/github/workspace/android-ndk-r13b
+        export ANDROID_HOME=/opt/android/android-sdk
+        export PATH=$PATH:$ANDROID_NDK_HOME
         buildozer android debug
       env:
         BUILDOZER_WARN_ON_ROOT: 0
-        ANDROID_HOME: /opt/android/android-sdk
-        ANDROID_NDK_HOME: /opt/android/android-ndk
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
